--- a/index.html
+++ b/index.html
@@ -5,6 +5,137 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item header__menu-item_active header__links-list-item_no-bullit">
+            <a class="header__menu-link">главная</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__menu-item">
+            <a class="header__menu-link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
+        >
+      </a>
+      <div class="contacts">
+        <p>
+          <a href="tel:"+99995555555>+9 999 555 5555</a>
+        </p>
+        <p>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </p>
+        <address>наб. Принсенграхт 263-<br> 265, Амстердам</address>
+      </div>
+    </header>
+    <main class="main">
+      <section class="cover overlay">
+        <h1 class="cover__title">
+          <span class="accent-span"><span class="span-03">о</span><span class="span-06">н</span>о</span>
+          <span class="accent-span text-center"><span class="span-03">т</span><span class="span-03">е</span><span class="span-06">б</span>е</span>
+          <span class="accent-span text-right"><span class="span-06">н</span><span class="span-03">а</span><span class="span-03">д</span>о</span>
+        </h1>
+        <div class="cover-text">
+          <p class="subline">aукцион<span style="letter-spacing: 0.9em"> </span>вещей,<span style="letter-spacing: 0.8em"> </span>в<span style="letter-spacing: 1.1em"> </span>которые<span style="letter-spacing: 0.8em"> </span>никто<span style="letter-spacing: 0.9em"> </span>не<span style="letter-spacing: 0.8em"> </span>верил</p>
+          <button class="cover-button">сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots__title">лоты</h2>
+        <ul class="lots__list">
+          <li class="lots__item lots__item-1 overlay">
+            <p class="item__title">
+              Фильм режиссёра, который бросил киношколу
+            </p>
+            <p class="item__text">
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </p>
+          </li>
+          <li class="lots__item lots__item-2 overlay">
+            <p class="item__title">
+              Книга, где описан один скучный день из жизни рекламного агента
+            </p>
+            <p class="item__text">
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+            </p>
+          </li>
+          <li class="lots__item lots__item-3 overlay">
+            <p class="item__title">
+              Картина, которую повторит даже 5-летний сын маминой подруги
+            </p>
+            <p class="item__text">
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+            </p>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="img__container">
+          <img class="about__img" src="./images/logo-white.svg" alt="logo">
+        </div>  
+        <div class="about-column">
+          <div class="about__title">Об аукционе</div>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <br>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="contacts">
+        <p>
+          <a href="tel:"+99995555555>+9 999 555 5555</a>
+        </p>
+        <p>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </p>
+        <address>наб. Принсенграхт 263-<br> 265, Амстердам</address>
+      </div>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-item footer__menu-item_active">
+            <a class="footer__menu-link">главная</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="socials">
+        <a href="#">
+          <img class="social-img" src="./images/yt.svg" alt="Youtube logo">
+        </a>
+        <a href="#">  
+          <img class="social-img" src="./images/vk.svg" alt="VK logo">
+        </a>
+        <a href="#">  
+          <img class="social-img" src="./images/pinterest.svg" alt="Pinterest logo">
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
