--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/global.css">
@@ -33,7 +33,7 @@
       </a>
       <div class="contacts">
         <p>
-          <a href="tel:"+99995555555>+9 999 555 5555</a>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
         </p>
         <p>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -88,7 +88,9 @@
           <img class="about__img" src="./images/logo-white.svg" alt="logo">
         </div>  
         <div class="about-column">
-          <div class="about__title">Об аукционе</div>
+          <div class="about__title">
+            <h2>Об аукционе</h2>
+          </div>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
@@ -105,7 +107,7 @@
     <footer class="footer">
       <div class="contacts">
         <p>
-          <a href="tel:"+99995555555>+9 999 555 5555</a>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
         </p>
         <p>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
