--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
-        <img
-          class="header__logo-image"
-          src="./images/logo-black.svg"
-          alt="Логотип проекта"
-        >
-      </a>
+      <div class="header__logo">
+        <a>
+          <img
+            class="header__logo-image"
+            src="./images/logo-black.svg"
+            alt="Логотип проекта"
+          >
+        </a>
+      </div>
       <div class="contacts">
         <p>
           <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -89,7 +91,7 @@
         </div>  
         <div class="about-column">
           <div class="about__title">
-            <h2>Об аукционе</h2>
+            <h2 class="about__title-text">Об аукционе</h2>
           </div>
           <div class="about__text">
             <p>
