--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="header__menu">
         <ul class="header__menu-list">
           <li class="header__menu-item header__menu-item_active header__links-list-item_no-bullit">
-            <a class="header__menu-link">главная</a>
+            <a class="header__menu-link header__menu-item_active" href="#">главная</a>
           </li>
           <li class="header__menu-item">
             <a class="header__menu-link" href="#">посмотреть лоты</a>
@@ -29,7 +29,7 @@
           <img
             class="header__logo-image"
             src="./images/logo-black.svg"
-            alt="Логотип проекта"
+            alt="Логотип"
           >
         </a>
       </div>
@@ -87,7 +87,7 @@
       </section>
       <section class="about">
         <div class="img__container">
-          <img class="about__img" src="./images/logo-white.svg" alt="logo">
+          <img class="about__img" src="./images/logo-white.svg" alt="Логотип">
         </div>  
         <div class="about-column">
           <div class="about__title">
@@ -118,8 +118,8 @@
       </div>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
-          <li class="footer__menu-item footer__menu-item_active">
-            <a class="footer__menu-link">главная</a>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link footer__menu-item_active" href="#">главная</a>
           </li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="#">посмотреть лоты</a>
