--- a/index.html
+++ b/index.html
@@ -50,32 +50,43 @@
         </div>
       </section>
       <section class="lots">
-        <h2 class="lots__title">лоты</h2>
-        <ul class="lots__list">
-          <li class="lots__item lots__item-1 overlay">
-            <h3 class="item__title">
-              Фильм режиссёра, который бросил киношколу
-            </h3>
-            <p class="item__text">
-              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-            </p>
+        <h2 class="lots__heading">лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_film overlay">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+                </p>
+              </article>
+            </a>
           </li>
-          
-          <li class="lots__item lots__item-2 overlay">
-            <h3 class="item__title">
-              Книга, где описан один скучный день из жизни рекламного агента
-            </h3>
-            <p class="item__text">
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_book overlay">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+                </p>
+              </article>
+            </a>
           </li>
-          <li class="lots__item lots__item-3 overlay">
-            <h3 class="item__title">
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </h3>
-            <p class="item__text">
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-            </p>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#">
+              <article class="card card_type_picture overlay">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
           </li>
         </ul>
         <a class="lots__look-more-link" href="#">посмотреть больше</a>
@@ -85,7 +96,7 @@
           <img class="about__img" src="./images/logo-white.svg" alt="Логотип">
         </div>  
         <div class="about-column">
-            <h2 class="about__title">Об аукционе</h2>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p class="about__paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
@@ -120,17 +131,17 @@
       <ul class="socials">
         <li>
           <a href="#">
-            <img class="social-img" src="./images/yt.svg" alt="Youtube logo">
+            <img class="social-img" src="./images/yt.svg" alt="Логотип Ютуб">
           </a>
         </li>
         <li>
           <a href="#">  
-            <img class="social-img" src="./images/vk.svg" alt="VK logo">
+            <img class="social-img" src="./images/vk.svg" alt="Логотип ВК">
           </a>
         </li>
         <li>
           <a href="#">  
-            <img class="social-img" src="./images/pinterest.svg" alt="Pinterest logo">
+            <img class="social-img" src="./images/pinterest.svg" alt="Логотип Пинтерест">
           </a>
         </li>
       </ul>
