--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             alt="Логотип"
           >
         </a>
-      <address class="contacts">
+      <address class="contacts header__contacts">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
@@ -40,9 +40,9 @@
     <main class="main">
       <section class="cover overlay">
         <h1 class="cover__title">
-          <span class="accent-span">о<span class="bigger-span">н</span>о</span>
-          <span class="accent-span text-center">те<span class="bigger-span">б</span>е</span>
-          <span class="accent-span text-right"><span class="bigger-span">н</span>адо</span>
+          <span class="accent-span text-left">о<span class="bigger-span">н</span>о</span>
+          <span class="accent-span text-center">те<span class="bigger-span">бе</span></span>
+          <span class="accent-span text-right"><span class="bigger-span">н</span>ад<span class="reset-span">о</span></span>
         </h1>
         <div class="cover-text">
           <p class="subline">aукцион вещей, в которые никто не верил</p>
@@ -110,7 +110,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="contacts">
+      <address class="contacts footer__contacts">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
